imagenes para la tarea

--- a/Clase1/Tareas1/Tarea+1..ipynb
+++ b/Clase1/Tareas1/Tarea+1..ipynb
@@ -111,12 +111,12 @@
    "metadata": {},
    "source": [
     "# Mi turno (pag 45)\n",
-    "#### 1. En la ventana de Terminal abierta, liste el contenido del directorio World."
+    "    1. En la ventana de Terminal abierta, liste el contenido del directorio World."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
       "28/09/2017  22:25    <DIR>          North_America\n",
       "28/09/2017  22:25    <DIR>          South_America\n",
       "               5 archivos         28.387 bytes\n",
-      "               8 dirs  145.210.519.552 bytes libres\n"
+      "               8 dirs  145.205.452.800 bytes libres\n"
      ]
     }
    ],
@@ -154,24 +154,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " ### Tambien mediante el codigo **ls ~/World** lo cual mostrara lo siguiente\n",
+    "![](ima2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Mi turno (pag 51)\n",
-    "    1. Utilice la **-l** opción con el **ls** comando sin argumento, para listar el contenido de su directorio de trabajo.\n",
+    "   1. Utilice la **-l** opción con el **ls** comando sin argumento, para listar el contenido de su directorio de trabajo.\n",
+    "![](ima3.png)\n",
+    "![](ima4.png)\n",
     "\n",
-    "# agregar 2 imagenes aqui\n",
-    "    2. A continuación, escriba **clear** y presione **Enter.**\n",
-    " # agregar imagen de clear\n",
-    "     4. Intente revisar su código usando el teclado.\n",
-    "# agregar imangen de teclas\n",
+    "   2. A continuación, escriba **clear** y presione **Enter.**\n",
+    "![](ima5.png)\n",
+    "   4. Intente revisar su código usando el teclado.\n",
+    "![](ima6.png) \n",
     "\n",
     "# Mi turno (pag 55)\n",
-    "    1. Pase la **-a** opción con el **ls** comando para el directorio World.\n",
-    "# agregar imangen de directorio world\n",
-    "    2. ¿Puedes detectar los archivos ocultos? Debe haber un total de 14 artículos en el directorio Mundial , incluyendo los 6 directorios continentales que vimos en una actividad anterior.\n",
+    "   1. Pase la **-a** opción con el **ls** comando para el directorio World.\n",
+    "![](ima7.png)\n",
     "\n",
-    "    si, como se puede observar en la imagen \n",
+    "   2. ¿Puedes detectar los archivos ocultos? Debe haber un total de 14 artículos en el directorio Mundial , incluyendo los 6 directorios continentales que vimos en una actividad anterior.\n",
     "\n",
-    "    3. Borre la ventana Terminal.\n",
-    " # imagen terminal limpia\n",
+    "si, pero en mi caso solo se visualizan 13 artículos incluyendo los 6 directorios continentales que vimos anteriormente.\n",
+    "\n",
+    "   3. Borre la ventana Terminal.\n",
+    "   \n",
+    "![](ima5.png)\n",
     "\n",
     "\n",
     "# Mi turno (pag 61)\n",
@@ -256,13 +267,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tambien podemos obtener eso en la terminal de git bash para windows\n",
+    "\n",
+    "![](ima8.png)\n",
+    "\n",
+    "    4. Limpie la venta del terminal\n",
+    "    \n",
+    "![](ima5.png)\n",
+    "\n",
+    "# Mi turno (pag 73)\n",
+    "    1. Usted pueder haber notado que hemos olvidado incluir la Antarctica en el directorio del mundo\n",
+    "    2. Adelante y corregir este error directamente desde la línea de comandos; hacer un nuevo directorio titulado \"Antarctica\" dentro del directorio Mundial."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mkdir Antarctica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    3.  Para asegurarse de que ha creado el directorio en el lugar correcto, enumere el contenido del directorio Wolrd."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " El volumen de la unidad C no tiene etiqueta.\n",
+      " El n£mero de serie del volumen es: 7AEE-A896\n",
+      "\n",
+      " Directorio de C:\\Users\\alex\\World\n",
+      "\n",
+      "29/09/2017  01:31    <DIR>          .\n",
+      "29/09/2017  01:31    <DIR>          ..\n",
+      "16/09/2014  18:12             4.143 .arctic_ocean.jpg\n",
+      "16/09/2014  18:07             7.461 .atlantic_ocean.jpg\n",
+      "16/09/2014  18:08             6.872 .indian_ocean.jpg\n",
+      "16/09/2014  18:06             4.166 .pacific_ocean.jpg\n",
+      "16/09/2014  18:12             5.745 .southern_ocean.jpg\n",
+      "28/09/2017  22:25    <DIR>          Africa\n",
+      "29/09/2017  01:31    <DIR>          Antarctica\n",
+      "28/09/2017  22:25    <DIR>          Asia\n",
+      "28/09/2017  22:25    <DIR>          Australia\n",
+      "28/09/2017  22:25    <DIR>          Europe\n",
+      "28/09/2017  22:25    <DIR>          North_America\n",
+      "28/09/2017  22:25    <DIR>          South_America\n",
+      "               5 archivos         28.387 bytes\n",
+      "               9 dirs  145.203.511.296 bytes libres\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tambien podemos visualizar desde terminal git bash windows.\n",
+    "![](ima9.png)\n",
+    "\n",
+    "    4. borrar la ventana Terminal\n",
+    "    \n",
+    "![](ima5.png)\n"
+   ]
   }
  ],
  "metadata": {
