Avance de la Tarea 1, uso de lineas de comandos en la terminal git bash

--- a/Clase1/Tareas1/Tarea+1..ipynb
+++ b/Clase1/Tareas1/Tarea+1..ipynb
@@ -163,24 +163,29 @@
    "metadata": {},
    "source": [
     "# Mi turno (pag 51)\n",
-    "   1. Utilice la **-l** opción con el **ls** comando sin argumento, para listar el contenido de su directorio de trabajo.\n",
+    "       1. Utilice la **-l** opción con el **ls** comando sin argumento, para listar el contenido de su directorio de trabajo.\n",
     "![](ima3.png)\n",
     "![](ima4.png)\n",
     "\n",
-    "   2. A continuación, escriba **clear** y presione **Enter.**\n",
+    "       2. A continuación, escriba **clear** y presione **Enter.**\n",
     "![](ima5.png)\n",
-    "   4. Intente revisar su código usando el teclado.\n",
+    "\n",
+    "       4. Intente revisar su código usando el teclado.\n",
+    "       \n",
     "![](ima6.png) \n",
     "\n",
+    "\n",
     "# Mi turno (pag 55)\n",
-    "   1. Pase la **-a** opción con el **ls** comando para el directorio World.\n",
+    "       1. Pase la **-a** opción con el **ls** comando para el directorio World.\n",
+    "   \n",
     "![](ima7.png)\n",
     "\n",
-    "   2. ¿Puedes detectar los archivos ocultos? Debe haber un total de 14 artículos en el directorio Mundial , incluyendo los 6 directorios continentales que vimos en una actividad anterior.\n",
+    "       2. ¿Puedes detectar los archivos ocultos? Debe haber un total de 14 artículos en el directorio Mundial , incluyendo los 6 directorios continentales que vimos en una actividad anterior.\n",
     "\n",
-    "si, pero en mi caso solo se visualizan 13 artículos incluyendo los 6 directorios continentales que vimos anteriormente.\n",
+    "  si, pero en mi caso solo se visualizan 13 artículos incluyendo los 6 directorios continentales que vimos anteriormente.\n",
     "\n",
-    "   3. Borre la ventana Terminal.\n",
+    "\n",
+    "       3. borre la ventana del terminal\n",
     "   \n",
     "![](ima5.png)\n",
     "\n",
